src/snapshots/ruff__linter__tests__RUF002_RUF002.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterDocstring:
      - ）
      - )
  location:
    row: 5
    column: 55
  end_location:
    row: 5
    column: 56
  fix:
    patch:
      content: )
      location:
        row: 5
        column: 55
      end_location:
        row: 5
        column: 56

