src/snapshots/ruff__linter__tests__RUF003_RUF003.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  x = "𝐁ad string"
  
  
  def f():
      """Here's a docstring with an unusual parenthesis: ）"""
|     # And here's a comment with an unusual punctuation mark: ᜵
|> Comment contains ambiguous unicode character '᜵' (did you mean '/'?)
      ...

