src/snapshots/ruff__linter__tests__RUF101_RUF101.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: ConvertExitToSysExit
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix: ~
- kind: ConvertExitToSysExit
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 4
  fix:
    patch:
      content: sys.exit
      location:
        row: 10
        column: 0
      end_location:
        row: 10
        column: 4
    applied: false
- kind: ConvertExitToSysExit
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 4
  fix:
    patch:
      content: sys2.exit
      location:
        row: 23
        column: 0
      end_location:
        row: 23
        column: 4
    applied: false
- kind: ConvertExitToSysExit
  location:
    row: 35
    column: 0
  end_location:
    row: 35
    column: 4
  fix:
    patch:
      content: exit2
      location:
        row: 35
        column: 0
      end_location:
        row: 35
        column: 4
    applied: false

