src/snapshots/ruff__linter__tests__RUF101_RUF101_0.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: ConvertExitToSysExit
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix: ~
- kind: ConvertExitToSysExit
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 8
  fix: ~

