src/snapshots/ruff__linter__tests__RUF101_RUF101_4.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: ConvertExitToSysExit
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix:
    patch:
      content: exit2
      location:
        row: 3
        column: 0
      end_location:
        row: 3
        column: 4
- kind: ConvertExitToSysExit
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 8
  fix:
    patch:
      content: exit2
      location:
        row: 7
        column: 4
      end_location:
        row: 7
        column: 8

