src/snapshots/ruff__linter__tests__S102_S102.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: ExecUsed
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 17
  fix: ~
- kind: ExecUsed
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 13
  fix: ~

